Attempt 2 at fixing last name search, this time more informed
