# swagger_server/controllers/default_controller.py
@@ -54,3 +54,20 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
         return res
     return 'Not Found', 404
 
+
+def get_student_by_last_name(last_name, subject=None):  # noqa: E501
+    """Find student by last name
+
+    Returns a single student # noqa: E501
+
+    :param student_last_name: last name of student to return
+    :type student_id: int
+    :param subject: The subject name
+    :type subject: str
+
+    :rtype: Student
+    """
+    res = student_service.get_student_by_last_name(last_name, subject=subject)
+    if res:
+        return res
+    return 'Not Found', 404
